# Parallel-Log-Analyzer

./: .gitignore  CMakeLists.txt  LogGenerator.java  README.md  generate_log_file.py  main.cpp
src/: Analytics.h  LogParser.cpp  LogParser.h
